--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -39,7 +39,11 @@
                   <table style=  'font-size:80% ;width:100%'>    
                     <tr style="font-weight:bold">
                     <td>Medio: </td>
-                    <td> <%= product.medio.descrip %></td>
+                      <% if product.medio.nil? %>
+                        <td> <%= product.medio_id %></td>
+                      <% else %>
+                        <td> <%= product.medio.descrip %></td>
+                      <% end %>    
                     <td> </td>
                     <td></td>
                     <td></td>
