--- a/app/views/ordens/orden_rpt.pdf.erb
+++ b/app/views/ordens/orden_rpt.pdf.erb
@@ -82,7 +82,7 @@
                 
                     <tr>
                     <td width="5%"> <%= nroitem %> </td>
-                    <td width= "40%" ><%=  product_detail.description %></td>
+                    <td width= "40%" ><%=  product_detail.descrip %></td>
                     <td width = "10%" align ="right"><%= sprintf("%.2f",product_detail.quantity.to_s)   %></td>
                     <td width = "10%" align ="right"><%= sprintf("%.2f",product_detail.tarifa.to_s)   %> </td>
                     <td width = "10%" align ="right"><%= sprintf("%.2f",product_detail.price.to_s)   %></td>
@@ -168,7 +168,7 @@
                       <tr>
                         
                       <td width="5%"> <%= nroitem %> </td>
-                      <td width= "40%" ><%=  product_detail.description %></td>
+                      <td width= "40%" ><%=  product_detail.descrip %></td>
                       <td width = "10%" align ="right"><%= sprintf("%.2f",product_detail.quantity.to_s)   %></td>
                       <td width = "10%" align ="right"><%= sprintf("%.2f",product_detail.tarifa.to_s)   %> </td>
                       <td width = "10%" align ="right"><%= sprintf("%.2f",product_detail.price.to_s)   %></td>
@@ -263,7 +263,7 @@
             <% for product_detail  in @orden_details %>
                 <tr>
                 <td width="5%"> <%= nroitem %> </td>
-                <td width= "40%" ><%=  product_detail.description %></td>
+                <td width= "40%" ><%=  product_detail.descrip %></td>
                 <td width = "10%" align ="right"><%= sprintf("%.2f",product_detail.quantity.to_s)   %></td>
                 <td width = "10%" align ="right"><%= sprintf("%.2f",product_detail.tarifa.to_s)   %> </td>
                 <td width = "10%" align ="right"><%= sprintf("%.2f",product_detail.price.to_s)   %></td>
