orden modificacion subtotal

--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -105,7 +105,7 @@
                        
                      <% @detalle.each do |orden1| %> 
 
-                            <%  @saldo -= orden1.total %>
+                            <%  @saldo -= orden1.subtotal %>
 
                             <% if lcMes  == orden1.month %> 
 
