--- a/app/views/reports/rpt_contratos3_pdf.html.erb
+++ b/app/views/reports/rpt_contratos3_pdf.html.erb
@@ -29,6 +29,32 @@ totals = []
 	<div class="field">
     Hasta <input type="date" name="fecha2" value="2019-06-30" style = "width: 150px" >
   </div>
+
+
+
+<table>
+    <tr>
+      <td>
+        <div class="field">
+            <input id="check_cliente" name="check_cliente" type="checkbox" value="true" checked />
+          <div class="small">
+            Todos los clientes
+          </div>
+        </div>
+        
+      </td>
+      <td>
+      <div class="field">
+        <h5>  Cliente </h5>
+        <%= select_tag(:customer_id,options_from_collection_for_select(@customers,'id','name'),:id => "customer_select"  ) %>
+      </div>
+      </td>
+      
+    </tr>
+    <tr>
+  </table>
+
+
   
   
 
