--- a/app/views/ordens/_list.html.erb
+++ b/app/views/ordens/_list.html.erb
@@ -1,3 +1,11 @@
+
+<%= form_tag(ordens_path, :method => "get", id: "search-form") do %>
+  <%= text_field_tag :search, params[:search], placeholder: "Busccar ordenes" %>
+  <%= submit_tag "Buscar " %>
+<% end %>
+
+
+
 <% if @ordens.count > 0 %>
   <table>
     <thead>
