--- a/app/views/ordens/_list.html.erb
+++ b/app/views/ordens/_list.html.erb
@@ -46,7 +46,7 @@
             <%= money(orden.total) %>
           </td>
           <td class="bordered_right bordered_bottom">
-            <%= doDate(orden.created_at) %>
+            <%= doDate(orden.fecha) %>
           </td>
 
           
