--- a/app/views/contratos/contratos_details/_form.html.erb
+++ b/app/views/contratos/contratos_details/_form.html.erb
@@ -78,10 +78,16 @@
       <%= f.label :factura2, "Factura 2*", :class => "bold" %><br />
       <%= f.text_field :factura2 %>      
     </div>
+
     <div class="field">
       <%= f.label :fechafac2, "Fecha Factura 2*", :class => "bold" %><br />
       <%= f.date_field :fechafac2 %>      
     </div>
+    <div class="field">
+      <%= f.label :fecha_pago, "Fecha  Pago *", :class => "bold" %><br />
+      <%= f.date_field :fecha_pago %>      
+    </div>
+
 
    <div class="field">
       <%= f.check_box :sit %>
