--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -80,11 +80,9 @@
 
 <%= hr() %>
 
-
-<div class="button">
-  <%= link_to 'Agregar item', new_add_orden_orden_product_path %>
-  
-</div>
+  <div class="button">
+      <%= link_to 'Agregar Item', new_orden_orden_product_path(@orden) %>
+    </div> 
 
 
 
