--- a/app/views/ordens/show.html.erb
+++ b/app/views/ordens/show.html.erb
@@ -82,9 +82,7 @@
 
   <div class="button">
       <%= link_to 'Agregar Item', new_orden_orden_product_path(@orden) %>
-    </div> 
-
-
+  </div> 
 
 
 <%= hr() %>
@@ -411,11 +409,11 @@
 <div class="button">
   <%= link_to 'Export to PDF', "/ordens/pdf/#{@orden.id} " %>
 
-<% if @factura.processed =="0" || @factura.processed==nil %>
+<% if @orden.processed =="0" || @orden.processed==nil %>
   <%= link_to 'Procesar orden', "/ordens/do_process/#{@orden.id}" %>
 
 
-<% elsif @factura.processed =="1" %>  
+<% elsif @orden.processed =="1" %>  
   <%= link_to 'Anular', "/ordens/do_anular/#{@orden.id}" %>
 <% end %>
   
