--- a/app/views/supplier_payments/rpt_contrato_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_contrato_01.pdf.erb
@@ -57,7 +57,7 @@
 
               </table>
 
-<% @detalle = detalle.get_contratos_medio_customer(@fecha1,@fecha2,detalle.medio_id) %>
+            <% @detalle = detalle.get_contratos_medio_customer(@fecha1,@fecha2,detalle.medio_id) %>
                  
             <% tot_inafecto = 0 %>
             <% tot_payable = 0 %>
@@ -75,7 +75,7 @@
 
 
                   
-            <%  @detalle.each do |compra| %>
+        <%  @detalle.each do |compra| %>
 
 
             <% @detalle2 = compra.get_contratos_customer_contrato(@fecha1,@fecha2,detalle.medio_id,detalle.customer_id) %>
@@ -140,7 +140,6 @@
                <% tot_fact2 += contrato.total  %> 
 
 
-
              <%end %>
                   
              
@@ -151,19 +150,17 @@
             <td width="30%">Total por Documento: </td>
             <td width="10%" align="right"> </td>
             <td width="5%" align="right"> </td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",tot_inafecto.to_s) %></td>
-            <td width="10%" align="right"> <%=sprintf("%.2f",tot_payable.to_s) %></td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",tot_tax.to_s) %></td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",tot_total.to_s) %> </td>
+            <td width="10%" align="right"> <%= sprintf("%.2f",tot_pago1.to_s) %></td>
+            <td width="10%" align="right"> <%=sprintf("%.2f",tot_pago2.to_s) %></td>
+            <td width="10%" align="right"> <%= sprintf("%.2f",tot_fact1.to_s) %></td>
+            <td width="10%" align="right"> <%= sprintf("%.2f",tot_fact2.to_s) %> </td>
             </tr>
             </table>
-               <%  totg1 += tot_inafecto  %>                  
-               <%  totg2 += tot_payable   %> 
-               <%  totg3 += tot_tax  %>                  
-               <%  totg4 += tot_total  %> 
 
-      
+            
         <%end%>
+
+
 
      
                  <table style=  'font-size:80% ;width:100%'>       
@@ -184,6 +181,7 @@
 
       <%end %>
 
+      <%end %>
 
         
       </body>
