--- a/app/views/supplier_payments/rpt_contrato_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_contrato_01.pdf.erb
@@ -7,30 +7,26 @@
   <tr bgcolor="#B4D7F7">
     <th width="8%">     </th>
     <th width="8%">  Cuota   </th>
-    <th width="8%">        </th>
-    <th width="8%">  Valor    </th>
-    <th width="30%">  </th>
-    <th width="30%"> Total </th>
+    <th width="10%">  Valor    </th>
+    <th width="10%">  </th>
+    <th width="10%"> Total </th>
     <th width="10%"> Factura  </th>
-    <th width="5%">  Factura     </th>
+    <th width="10%">  Factura     </th>
     <th width="10%"> Fecha  </th>
-    <th width="10%">   </th>
-    <th width="10%">   </th>
-    <th width="10%">   </th>
+    <th width="4%">  Sit </th>
+    
   </tr>
  <tr bgcolor="#B4D7F7">
-    <th width="8%">     </th>
     <th width="8%">  Nro.   </th>
     <th width="8%">  Vcmto   </th>
-    <th width="8%">  Venta    </th>
-    <th width="30%"> IGV </th>
-    <th width="30%"> Cuota </th>
+    <th width="10%">  Venta    </th>
+    <th width="10%"> IGV </th>
+    <th width="10%"> Cuota </th>
     <th width="10%"> Canal  </th>
-    <th width="5%">  Masa     </th>
+    <th width="10%">  Masa     </th>
     <th width="10%"> Cancel. </th>
-    <th width="10%"> Sit.  </th>
-    <th width="10%"> Ctrol  </th>
-    <th width="10%">   </th>
+    <th width="4%"> Sit.  </th>
+    
   </tr>
 
   </table>
@@ -44,6 +40,8 @@
       <% totg3 = 0 %>
       <% totg4 = 0 %>
 
+      <%@contratolist = Contrato.first %>
+
 
     
 <%  @contratos_rpt.each do |detalle| %>
@@ -52,21 +50,27 @@
 
                   <tr style="font-weight:bold">
                   <td width="8%" >CANAL : </td>
-                  <td width="20%"align="left"> <%= detalle.get_medio(detalle.medio_id)   %></td>
-                  <td width="72%"> </td>    
+                  <td width="50%"align="left"> <%= detalle.get_medio(detalle.medio_id)   %></td>
+                  <td width="42%"> </td>    
                   </tr>
 
               </table>
 
-            <% @detalle = detalle.get_contratos_medio_customer(@fecha1,@fecha2,detalle.medio_id) %>
+            <% @detalle = @contratolist.get_contratos_medio_customer(@fecha1,@fecha2,detalle.medio_id) %>
                  
-            <% tot_inafecto = 0 %>
-            <% tot_payable = 0 %>
-            <% tot_tax   = 0 %>
-            <% tot_total = 0 %>
-
+            <% tot_pago1 = 0 %>
+            <% tot_pago2 = 0 %>
+            <% tot_cob1 = 0 %>
+            <% tot_cob2 = 0 %>
             
+            <% tot_fact1 = 0 %>
+            <% tot_fact2 = 0 %>
+            <% tot_canc1 = 0 %>
+            <% tot_canc2 = 0 %>
 
+            <% tot_cont1 = 0 %>
+            <% tot_cont2 = 0 %>
+            
                   
         <%  @detalle.each do |compra| %>
 
@@ -74,33 +78,30 @@
 
                   <tr style="font-weight:bold">
                   <td width="8%" > CLIENTE : </td>
-                  <td width="20%"align="left"> <%= compra.get_cliente(compra.customer_id)   %></td>
+                  <td width="20%"align="left"> <%= @contratolist.get_customer(compra.customer_id)   %></td>
                   <td width="72%"> </td>    
                   </tr>
 
               </table>
 
+            <% @detalle2 = @contratolist.get_contratos_customer_contrato(@fecha1,@fecha2,detalle.medio_id,compra.customer_id) %>
 
-
-            <% @detalle2 = compra.get_contratos_customer_contrato(@fecha1,@fecha2,detalle.medio_id,compra.customer_id) %>
-
-
-            <% @detalle2.each do |contrato| %> 
+            <% @detalle2.each do |contrato1| %> 
     
                  <table style=  'font-size:80% ;width:100%'>    
 
-                  <tr style="font-weight:bold">
+                  <tr bgcolor="#B4D7F7" style="font-weight:bold">
                   <td width="8%" > Contrato : </td>
-                  <td width="20%"align="left"> <%= contrato.contrato.code %></td>
-                  <td width="20%"align="left"> <%= contrato.get_contrato %></td>
+                  <td width="20%"align="left"> <%= contrato1.code %></td>
+                  <td width="20%"align="left"> <%= contrato1.get_contrato_id(contrato1.id) %></td>
                   <td>Mon: </td>
-                  <td width="20%"align="left"> <%= contrato.get_moneda %></td>
-                  <td width="20%"align="left"> <%= sprintf("%.2f",contrato.importe.to_s) %></td>
+                  <td width="20%"align="left"> <%= contrato1.get_moneda_id(contrato1.id) %></td>
+                  <td width="20%"align="left"> <%= sprintf("%.2f",contrato1.importe.to_s) %></td>
                   <td>Cuotas: </td>
                   <td>Com1: </td>
-                  <td align="left"> <%= sprintf("%.2f",contrato.comision1.to_s) %>%</td>
+                  <td align="left"> <%= sprintf("%.2f",contrato1.comision1.to_s) %>%</td>
                   <td>Com2: </td>
-                  <td align="left"> <%= sprintf("%.2f",contrato.comision2.to_s) %>%</td>
+                  <td align="left"> <%= sprintf("%.2f",contrato1.comision2.to_s) %>%</td>
 
                   </tr>
                 </table>
@@ -108,86 +109,124 @@
                <%nroitem = 1%> 
 
 
-               @contratodetalle = contrato.get_contrato_cuotas(contrato.id)
+       <%        @contratodetalle = contrato1.get_contrato_cuotas(contrato1.id) %>
 
 
-           <% @detalle3.each do |contrato2| %> 
+            <%if @contratodetalle.nil?%>
+                <p> </p>            
+            <%else %>
+
+           <% @contratodetalle.each do |contrato2| %> 
     
 
             <table style=  'font-size:80% ;width:100%'>       
             <tr>
             <td width="8%"><%= nroitem %> </td>
-            <td width="8%"><%= contrato2.fecha.strftime("%d/%m/%Y") %> </td>
-            <td width="30%"><%= sprintf("%.2f",contrato2.vventa.to_s) %> </td>
+            <td width="10%"><%= contrato2.fecha.strftime("%d/%m/%Y") %> </td>
+            <td width="10%" align="right" ><%= money(contrato2.vventa) %> </td>
             <td width="10%" align="left"></td>
-            <td width="5%" align="right"> </td>
-            <td width="10%" align="right"></td>
-            <td width="10%" align="right"> <%=sprintf("%.2f",contrato.importe.to_s) %></td>
+            <td width="10%" align="right"> <%= money(contrato2.importe) %></td>
             <td width="10%" align="right"> <%= contrato2.facturacanal %></td>
+
             <td width="10%" align="right"> <%= contrato2.factura1 %> </td>
-            <td width="10%" align="right"> <%= contrato2.fechafac1.strftime("%d%m%Y") %> </td>
+
+            <% if contrato2.fechafac1.nil? %> 
+                <td width="10%" align="right"> </td>
+            <% else %> 
+                <td width="10%" align="right"> <%= contrato2.fechafac1.strftime("%d%m%Y") %> </td>
+            <% end %>
+
             <td width="10%" align="right"> <%= contrato2.factura2 %> </td>
-            <td width="10%" align="right"> <%= contrato2.fechafac2.strftime("%d%m%Y") %> </td>
-            <td width="10%" align="right"> <%= contrato2.estado %> </td>
+
+            <% if contrato2.fechafac2.nil? %>
+                 <td width="10%" align="right">  </td>
+            <% else %>
+                 <td width="10%" align="right"> <%= contrato2.fechafac2.strftime("%d%m%Y") %> </td>
+            <% end %>
+
+            <td width="4%" align="right"> <%= contrato2.estado %> </td>
 
             </tr>       
             </table>
 
             <%  nroitem = nroitem + 1 %>
 
-             <%if contrato2.fec_pago.nil? %> 
-               <% tot_canc1 += contrato2.vventa %>
-               <% tot_canc2 += contrato2.total  %> 
+             <%if contrato2.sit.nil? %>
 
-             <%else %>
-               <% tot_pago1 += contrato2.vventa %>
-               <% tot_pago2 += contrato2.total  %> 
+               <% tot_canc1 += contrato2.vventa %>
+               <% tot_canc2 += contrato2.importe  %>
+            <% end %>    
+
+             <% if contrato2.factura1 != nil  and  contrato2.sit.nil? %>
+               <% tot_cob1 += contrato2.vventa %>
+               <% tot_cob2 += contrato2.importe  %> 
 
              <% end %>
 
              <%if contrato2.factura1.nil? %>
 
                <% tot_fact1 += contrato2.vventa %>
-               <% tot_fact2 += contrato2.total  %> 
+               <% tot_fact2 += contrato2.importe  %> 
 
 
              <%end %>
+
+             
+               <% tot_cont1 += contrato2.vventa %>
+               <% tot_cont2 += contrato2.importe  %> 
+
             <% end %>            
+
+
              
             <table style=  'font-size:80% ;width:100%'>       
             <tr>
-            <td width="8%"> </td>
-            <td width="8%">  </td>
-            <td width="30%">Total por Contrato: </td>
+            <td width="26%">Canceladas: </td>
+            <td width="10%" align="right"> <%= money(tot_canc1) %></td>
             <td width="10%" align="right"> </td>
-            <td width="5%" align="right"> </td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",tot_pago1.to_s) %></td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",tot_pago2.to_s) %></td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",tot_fact1.to_s) %></td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",tot_fact2.to_s) %> </td>
+            <td width="10%" align="right"> <%= money(tot_canc2) %></td>
+            <td width="44%" align="right"> </td>
             </tr>
+            </table>
 
+
+            <table style=  'font-size:80% ;width:100%'>       
+            <tr>
+            <td width="26%"> p.Cobrar : </td>
+            <td width="10%" align="right"> <%= money(tot_cob1) %></td>
+            <td width="10%" align="right"> </td>
+            <td width="10%" align="right"> <%= money(tot_cob2) %></td>
+            <td width="44%" align="right"> </td>
+            </tr>
+            </table>
+   
+            <table style=  'font-size:80% ;width:100%'>       
+            <tr>
+            <td width="26%">p.Facturar :</td>
+            <td width="10%" align="right"> <%= money(tot_fact1) %></td>
+            <td width="10%" align="right"> </td>
+            <td width="10%" align="right"> <%= money(tot_fact2) %></td>
+            <td width="44%" align="right"> </td>
+            </tr>
+            </table>   
+            <table style=  'font-size:80% ;width:100%'>       
+            <tr>
+             <hr> 
+            <td width="26%">Total por Contrato: </td>
+            <td width="10%" align="right"> <%= money(tot_cont1) %></td>
+            <td width="10%" align="right"> </td>
+            <td width="10%" align="right"> <%= money(tot_cont2) %></td>
+            <td width="44%" align="right"> </td>
+            </tr>
             </table>
 
 
         <%end%>
+    
+        <%end%>
 
      
-                 <table style=  'font-size:80% ;width:100%'>       
-                      <tr style="font-weight:bold">
-                      <td width="8%"> </td>
-                      <td width="8%">  </td>
-                      <td width="30%"> Total Dolares :</td>
-                      <td width="10%" align="right"> </td>
-                      <td width="5%" align="right"> </td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",totg1.to_s) %></td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",totg2.to_s) %></td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",totg3.to_s) %></td>
-            <td width="10%" align="right"> <%= sprintf("%.2f",totg4.to_s) %> </td>
-            
-
-                      </tr>
-                 </table>
+               
 
       <%end %>
 
