--- a/app/views/supplier_payments/rpt_contrato_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_contrato_01.pdf.erb
@@ -147,7 +147,7 @@
                  <td width="10%" align="right"> <%= contrato2.fechafac2.strftime("%d%m%Y") %> </td>
             <% end %>
 
-            <td width="4%" align="right"> <%= contrato2.estado %> </td>
+            <td width="4%" align="right"> <%= contrato2.sit %> </td>
 
             </tr>       
             </table>
