--- a/app/views/supplier_payments/rpt_contrato_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_contrato_01.pdf.erb
@@ -159,7 +159,7 @@
 
             <%  nroitem = nroitem + 1 %>
 
-             <%if contrato2.sit.nil? %>
+             <%if contrato2.sit=="1"%>
 
                <% tot_canc1 += contrato2.vventa %>
                <% tot_canc2 += contrato2.importe  %>
