--- a/app/views/ordens/list_ordens.html.erb
+++ b/app/views/ordens/list_ordens.html.erb
@@ -11,14 +11,63 @@
   <% end %>
 </h1>
 
-<div class="small">
-  <form method="get" action="/companies/ordens/<%= @company.id %>">
-    <strong>Search:</strong>
-    <input type="text" name="search" value="<% if @q_org %><%= @q_org %><% end %>" class="small" onclick="$(this).select();" />
-    <input type="submit" value="Buscar" class="bold small_btn" />
-    <a href="/companies/ordens/<%= @company.id %>" class="small_btn">Clear</a>
-  </form>
+<div>
+  <a href="#" onclick="toggle('filters'); return false;">Filters</a>
 </div>
+
+<div id="filters" class="filters" style="display: <%= @filters_display %>;">
+  <div>
+    <div class="small">
+      <form method="get" action="/companies/ordens/<%= @company.id %>">
+        <strong>Search:</strong>
+        <input type="text" name="q" value="<% if @q_org %><%= @q_org %><% end %>" class="small" style="width: 250px;" onclick="$(this).select();" />
+        <input type="submit" value="Find" class="bold small_btn" />
+      </form>
+    </div>
+  </div>
+
+  <div>  
+    <form method="get" action="/companies/ordens/<%= @company.id %>">
+      <div class="small">
+
+        <strong>Producto:</strong>
+        <select name="location" class="small">
+          <option value=""></option>
+          <% for location in @productos %>
+            <option value="<%= location.id %>" <% if(@sel_location.to_i == location.id) %>selected="selected"<% end %>><%= location.name %></option>
+          <% end %>
+        </select>
+    
+        <strong>Medio:</strong>
+        <select name="division" class="small">
+          <option value=""></option>
+          <% for division in @medios %>
+            <option value="<%= division.id %>" <% if(@sel_division.to_i == division.id) %>selected="selected"<% end %>><%= division.descrip %></option>
+          <% end %>
+        </select>
+    
+        <input type="submit" value="Filter" class="bold small_btn" />
+      </div>
+    </form>
+  </div>
+  
+  <div>
+    <form method="get" action="/companies/ordens/<%= @company.id %>">
+      <div class="small">
+        <strong>Cliente:</strong>
+        <input type="text" name="ac_customer" id="ac_customer" value="<% if @customer %><%= @customer.name %><% end %>" class="small" style="width: 235px;" />
+        <input type="submit" value="Find" class="bold small_btn" />
+      </div>
+    </form>
+  </div>
+
+
+  
+  <div class="button">
+    <a href="/companies/ordens/<%= @company.id %>" class="small_btn">Clear filters</a>
+  </div>
+</div>
+
 
  
 
@@ -31,7 +80,7 @@
 
 <div class="button">
   <%= link_to 'Orden TV/Radio/Otros', "/ordens/new/#{@company.id}" %>
-  <%= link_to 'Orden Digital', "/ordens/neworden/#{@company.id}" %>
+ 
 </div>
 
 <h2>Importar Archivos "*.csv"</h2>
