--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -141,8 +141,10 @@
                                 <% else %>
 
                                     <%  @total_cargos += @total_mes %>
+
+                                    <table style='font-family:"Courier New", Courier, monospace; font-size:90% ;width:80% ,border-collapse:collapse;' , align="center", width = "80%", border="1",cellpadding="0" cellspacing="0">
                                     
-                                    <table style=  'font-size:80% ;width:100%'>       
+                                       
                                         <tr>
                                         <td width="8%"> </td>
                                         <td width="8%">Total Mes : </td>
@@ -158,6 +160,11 @@
                                         
                                         </tr>                           
                                     </table>
+                                    
+                                    <hr>
+                                    <hr>
+                                    
+
 
                                      <%  @total_mes  = 0 %>    
 
