--- a/app/views/layouts/pdf-headers2.html
+++ b/app/views/layouts/pdf-headers2.html
@@ -37,14 +37,14 @@
 
     <tr>
     <th  width="20%"> </th>
-    <th  width="60%"> ESTADO DE CUENTA CLIENTES</th>
+    <th  width="60%"> <h4 ><center>ESTADO DE CUENTA CLIENTES </center>   </h4></th>
     <th  width="20%">Fecha: <span class="page"></th>
     
     </tr>
 
      <tr >
     <th width="20%"> </th>
-    <th width="60%">Desde: <%= @fecha1 %> Hasta: <%= @fecha2 %></th>
+    <th width="60%"> <h5><center> Desde: <%= @fecha1.to_s %>  Hasta: <%= @fecha2.to_s %> </center></h5></th>
     <th width="20%"> Pag.: <span class="page"></span> </th>
   
     
