--- a/app/views/layouts/pdf-header2.html.erb
+++ b/app/views/layouts/pdf-header2.html.erb
@@ -30,7 +30,7 @@
 
 
     <tr>
-    <th width="20%"><%= wicked_pdf_image_tag('images/logo.jpg')%></th>
+    <th width="20%"><%= wicked_pdf_image_tag('images/logo.jpg'), : width=>"90", :height=> "30" %></th>
     <th width="60%"> </th>
     <th width="20%"> TR-RHF-F-054</th>
     </tr>
