--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -142,21 +142,19 @@
 
                                     <%  @total_cargos += @total_mes %>
 
-                                    <table style='font-family:"Courier New", Courier, monospace; font-size:90% ;width:80% ,border-collapse:collapse;' , align="center", width = "80%", border="1",cellpadding="0" cellspacing="0">
-                                    
+                     <table style='font-family:"Courier New", Courier, monospace; font-size:90% ;width:80% ,border-collapse:collapse;' , align="center", width = "70%", border="1",cellpadding="0" cellspacing="0">
                                        
                                         <tr>
-                                        <td width="8%"> </td>
-                                        <td width="8%">Total Mes : </td>
-                                        <td width="30%"><%= orden1.get_mes(lcMes  )%> </td>
-                                        <td width="10%" align="right"> </td>
-                                        <td width="5%" align="right"> </td>
-                                        <td width="10%" align="right"> </td>
+                                      
+                                        <td width="50%">Total Mes : <%= orden1.get_mes(lcMes  )%></td>
+                                        
+                                      
+
                                         <td width="10%" align="right"><%= sprintf("%.2f",@total_mes.to_s)  %>  </td>
 
                                         <td width="10%" align="right"> <%= sprintf("%.2f",@total_cargos.to_s)  %></td>
                                         
-                                        <td width="10%" align="right"></td>
+                                      
                                         
                                         </tr>                           
                                     </table>
