--- a/app/views/layouts/pdf-header2.html.erb
+++ b/app/views/layouts/pdf-header2.html.erb
@@ -25,25 +25,25 @@
 
 
 
-<table style='font-family:"Courier New", Courier, monospace; font-size:70% ;width:100% ,border-collapse:collapse;' , border="1",cellpadding="0" cellspacing="0">
+<table style='font-family:"Courier New", Courier, monospace; font-size:100% ;width:100% ,border-collapse:collapse;' , border="1",cellpadding="0" cellspacing="0">
 
 
 
     <tr>
-    <th width="20%"><%= wicked_pdf_image_tag('images/logo3.jpg')  %></th>
+    <th width="20%" rowspan="3"><%= wicked_pdf_image_tag('images/logo3.jpg')  %></th>
     <th width="60%"> </th>
     <th width="20%"> TR-RHF-F-054</th>
     </tr>
 
     <tr>
-    <th  width="20%"> </th>
+    
     <th  width="60%"> <h4 ><center>ESTADO DE CUENTA CLIENTES </center>   </h4></th>
     <th  width="20%">Fecha: <span class="page"></th>
     
     </tr>
 
      <tr >
-    <th width="20%"> </th>
+  
     <th width="60%"> <h5><center> Desde: <%= @fecha1.to_s %>  Hasta: <%= @fecha2.to_s %> </center></h5></th>
     <th width="20%"> Pag.: <span class="page"></span> </th>
   
