--- a/app/views/layouts/pdf-header2.html.erb
+++ b/app/views/layouts/pdf-header2.html.erb
@@ -22,12 +22,7 @@
 
   <body style="margin-top: 70px;" onload="number_pages()">
       
-
-
-
-<table style='font-family:"Courier New", Courier, monospace; font-size:100% ;width:100% ,border-collapse:collapse;' , border="1",cellpadding="0" cellspacing="0">
-
-
+<table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100% ,border-collapse:collapse;' , border="0",cellpadding="0" cellspacing="0", width= "100%" >
 
     <tr>
     <th width="20%" rowspan="3"><%= wicked_pdf_image_tag('images/logo3.jpg')  %></th>
