--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -89,11 +89,11 @@
                              
                               <td width="10%" align="right"></td>
                               <td width="5%"  align="right"></td>
-                              <td width="10%" align="right"><%= sprintf("%.2f",abonos.importe.to_s)  %> </td>
+                              <td width="10%" align="right"><%= money(abonos.importe)  %> </td>
                               
                               <td width="10%" align="right"> </td>
                               <td width="10%" align="right"> </td>
-                              <td width="10%" align="right"><%= sprintf("%.2f",@saldo.to_s)%></td>
+                              <td width="10%" align="right"><%= money(@saldo)%></td>
                               </tr>
                              </table>                 
                          <% end %>
@@ -129,9 +129,9 @@
                                     <td width="5%"  align="right"><%= orden1.tiempo %></td>
                                     <td width="10%" align="right"> </td>
                                     
-                                    <td width="10%" align="right"><%= sprintf("%.2f",orden1.subtotal.to_s)  %> </td>
+                                    <td width="10%" align="right"><%= money(orden1.subtotal)  %> </td>
                                     <td width="10%" align="right"> </td>
-                                    <td width="10%" align="right"><%= sprintf("%.2f",@saldo.to_s)%></td>
+                                    <td width="10%" align="right"><%= money(@saldo)%></td>
                                     </tr>
                                    </table>                                       
                                 
@@ -150,9 +150,9 @@
                                         
                                       
 
-                                        <td width="10%" align="right"><%= sprintf("%.2f",@total_mes.to_s)  %>  </td>
+                                        <td width="10%" align="right"><%= money(@total_mes)  %>  </td>
 
-                                        <td width="10%" align="right"> <%= sprintf("%.2f",@total_cargos.to_s)  %></td>
+                                        <td width="10%" align="right"> <%= money(@total_cargos)  %></td>
                                         
                                       
                                         
@@ -179,9 +179,9 @@
                                     <td width="5%"  align="right"><%= orden1.tiempo %></td>
                                     <td width="10%" align="right"> </td>
                                     
-                                    <td width="10%" align="right"><%= sprintf("%.2f",orden1.subtotal.to_s)  %> </td>
+                                    <td width="10%" align="right"><%= money(orden1.subtotal)  %> </td>
                                     <td width="10%" align="right"> </td>
-                                    <td width="10%" align="right"><%= sprintf("%.2f",@saldo.to_s)%></td>
+                                    <td width="10%" align="right"><%= money(@saldo) %></td>
                                     </tr>
                                    </table>     
                                     <%   @total_mes += orden1.subtotal %>      
@@ -205,9 +205,9 @@
                           <td width="10%" align="right"> </td>
                           <td width="5%" align="right"> </td>
                           <td width="10%" align="right"> </td>
-                          <td width="10%" align="right"><%= sprintf("%.2f",@total_mes.to_s)  %>  </td>
+                          <td width="10%" align="right"><%= money(@total_mes)  %>  </td>
 
-                          <td width="10%" align="right"> <%= sprintf("%.2f",@total_cargos.to_s)  %></td>
+                          <td width="10%" align="right"> <%= money(@total_cargos)  %></td>
                           
                           <td width="10%" align="right"></td>
                           
