--- a/app/views/contratos/contrato_rpt2.pdf.erb
+++ b/app/views/contratos/contrato_rpt2.pdf.erb
@@ -197,20 +197,21 @@
 
                     <%  @total_cargos += @total_mes %>
                                     
-                      <table style=  'font-size:80% ;width:100%'>       
-                            <tr>
+                     <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:80% ,border-collapse:collapse;' , align="center", width = "80%", border="1",cellpadding="0" cellspacing="0">
+                          <tr>
                                       
-                                        <td width="50%">Total Mes : <%= orden1.get_mes(lcMes  )%></td>
-                                        
-                                      <td width="10%"> </td>
+                            <td width="50%">Total Mes : <%= orden1.get_mes(last_month  )%></td>
+                            
+                           <td width="10%"> </td>
 
-                                        <td width="10%" align="right"><%= money(@total_mes)  %>  </td>
+                            <td width="10%" align="right"><%= money(@total_mes)  %>  </td>
 
-                                        <td width="10%" align="right"> <%= money(@total_cargos)  %></td>
+                            <td width="10%" align="right"> <%= money(@total_cargos)  %></td>
+                            
+                          
                                         
-                                      
-                                        
-                                        </tr>                           
+                                        </tr>                         
+                         
                       </table>
 
 
