--- a/app/views/layouts/pdf-header2.html.erb
+++ b/app/views/layouts/pdf-header2.html.erb
@@ -32,7 +32,7 @@
 
     <tr>
     
-    <th  width="60%"> <h4 ><center>ESTADO DE CUENTA CLIENTES </center>   </h4></th>
+    <th  width="60%"> <center>ESTADO DE CUENTA CLIENTES </center>  </th>
     <th  width="20%"> Fecha: <%= Date.today.strftime("%d-%m-%Y") %> </th>
     
     </tr>
