--- a/app/views/reports/rpt_contratos3_pdf.html.erb
+++ b/app/views/reports/rpt_contratos3_pdf.html.erb
@@ -19,8 +19,7 @@ totals = []
 </h1>
 
 
-
-  <%= form_tag(ec_01_contratos_path, :method => "get") do %>
+  <%= form_tag(contratos_ec_01_facturas_path, :method => "get") do %>
 
   <div class="field">
     Desde <input type="date" name="fecha1" value="2019-01-01" style = "width: 150px" >
@@ -53,13 +52,7 @@ totals = []
     </tr>
     <tr>
   </table>
-
-
-  
-  
-
-  <%= submit_tag  "PDF", :name => "print"    %>
-
+  <%= submit_tag   "PDF", :name => "print" %>
   <%= submit_tag "Excel", :name => "print" %>
      
 <% end %>
