--- a/app/views/contratos/show.html.erb
+++ b/app/views/contratos/show.html.erb
@@ -173,10 +173,10 @@
              <% end %>
           </td>
          <td class="bordered_ right bordered_bottom">
-            <% if quote.nil? %>
-                 Cancelado 
+            <% if quote.sit.nil? %>
+                
             <%else%>
-                  
+                  Cancelado
             <%end %>
           </td>
           
