--- a/app/views/contratos/index.xls.erb
+++ b/app/views/contratos/index.xls.erb
@@ -8,9 +8,9 @@
     <Table>
       <Row>
         <Cell><Data ss:Type="String">ID</Data></Cell>
-        <Cell><Data ss:Type="String">Nombre</Data></Cell>
-        <Cell><Data ss:Type="String">Unidad</Data></Cell>
-        <Cell><Data ss:Type="String">Ubicacion</Data></Cell>
+        <Cell><Data ss:Type="String">Codigo</Data></Cell>
+        <Cell><Data ss:Type="String">Importe</Data></Cell>
+        <Cell><Data ss:Type="String">Des</Data></Cell>
       </Row>
   
    
