--- a/app/views/layouts/pdf-header3.html.erb
+++ b/app/views/layouts/pdf-header3.html.erb
@@ -63,7 +63,9 @@
     <th width="10%">  </th>
     <th width="10%"> Total </th>
     <th width="10%"> Factura  </th>
-    <th width="10%">  Factura     </th>
+    <th width="10%">  Factura 1     </th>
+    <th width="10%">  Factura 2     </th>
+    
     <th width="10%"> Fecha  </th>
     <th width="4%">  Sit </th>
     
@@ -76,6 +78,8 @@
     <th width="10%"> Cuota </th>
     <th width="10%"> Canal  </th>
     <th width="10%">  Masa     </th>
+    <th width="10%">  Masa     </th>
+    
     <th width="10%"> Cancel. </th>
     <th width="4%"> Sit.  </th>
     
