--- a/app/views/supplier_payments/rpt_contrato_01.pdf.erb
+++ b/app/views/supplier_payments/rpt_contrato_01.pdf.erb
@@ -47,7 +47,7 @@
     
                  <table style=  'font-size:80% ;width:100%'>    
 
-                  <tr bgcolor="#B4D7F7" style="font-weight:bold">
+                  <tr bgcolor="#B4D7F7" >
                   <td width="8%" > Contrato : </td>
                   <td width="20%"align="left"> <%= contrato1.code %></td>
                   <td width="20%"align="left"> <%= contrato1.get_contrato_id(contrato1.id) %></td>
@@ -111,7 +111,7 @@
                  <td width="10%" align="right"> <%= contrato2.fecha_pago.strftime("%d/%m/%Y") %> </td>
             <% end %>
 
-            <% if contrato2.sit == "1" %>
+            <% if contrato2.sit == 1 %>
 
             <td width="4%" align="right"> "C" </td>
             <% else %>
@@ -123,13 +123,13 @@
 
             <%  nroitem = nroitem + 1 %>
 
-             <%if contrato2.sit=="1"%>
+             <%if contrato2.sit== 1 %>
 
                <% tot_canc1 += contrato2.vventa %>
                <% tot_canc2 += contrato2.importe  %>
             <% end %>    
 
-             <% if contrato2.factura1 != nil  and  contrato2.sit != "1" %>
+             <% if contrato2.factura1 != nil  and  contrato2.sit != 1 %>
                <% tot_cob1 += contrato2.vventa %>
                <% tot_cob2 += contrato2.importe  %> 
 
